--- a/exercises.html
+++ b/exercises.html
@@ -9,6 +9,6 @@
 </head>
 <body>
             <!-- End of <body>. Load js here to make sure DOM is fully loaded before running js. -->
-                <script src="js/app.js"></script>
+                <script src="js/examples.js"></script>
 </body>
 </html>
