Starting point for our DOM manipulation training

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Title</title>
     <link rel="stylesheet" href="css/style.css" />
-    </head>
-    <body>
-
-        <!-- End of <body>. Load js here to make sure DOM is fully loaded before running js. -->
-        <script src="js/app.js"></script>
-    </body>
+  </head>
+  <body>
+    <!-- End of <body>. Load js here to make sure DOM is fully loaded before running js. -->
+    <script src="js/app.js"></script>
+    <!--
+    <script src="js/algorythms3.js"></script>
+    <script src="js/examples.js"></script>
+    -->
+  </body>
 </html>
