--- a/index.html
+++ b/index.html
@@ -4,10 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Title</title>
+    <title>Training JavaScript DOM Manipulation</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <h1>Lorem, ipsum dolor.</h1>
+    <nav>
+      <ul>
+        <li><a class="active" href="link">link 1</a></li>
+        <li><a href="">link 2</a></li>
+        <li><a href="">link 3</a></li>
+      </ul>
+    </nav>
+    <p id="first">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam,
+      doloribus!
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, veritatis.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime explicabo
+      accusamus, laudantium pariatur temporibus dicta?
+    </p>
+
+
+
+
     <!-- End of <body>. Load js here to make sure DOM is fully loaded before running js. -->
     <script src="js/app.js"></script>
     <!--
