Changed title of the exercises HTML and completed 6 and 7

--- a/exercises.html
+++ b/exercises.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" />
-    <title>Excersizes 01 to 10</title>
+    <title>Training JavaScript Exercises</title>
 </head>
 <body>
             <!-- End of <body>. Load js here to make sure DOM is fully loaded before running js. -->
