Adding and removing classes through the DOM

--- a/index.html
+++ b/index.html
@@ -8,29 +8,11 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Lorem, ipsum dolor.</h1>
-    <nav>
-      <ul>
-        <li><a class="active" href="link">link 1</a></li>
-        <li><a href="">link 2</a></li>
-        <li><a href="">link 3</a></li>
-      </ul>
-    </nav>
-    <p id="first">
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam,
-      doloribus!
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, veritatis.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime explicabo
-      accusamus, laudantium pariatur temporibus dicta?
-    </p>
-
-
-
-
+    <section>
+      <div>1</div>
+      <div>2</div>
+      <div class="dark">3</div>
+    </section>
     <!-- End of <body>. Load js here to make sure DOM is fully loaded before running js. -->
     <script src="js/app.js"></script>
     <!--
