--- a/index.html
+++ b/index.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Training JavaScript DOM Manipulation</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <title>Training Javascript DOM</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <section>
-      <div>1</div>
-      <div>2</div>
-      <div class="dark">3</div>
+      <div data-box-number="1">1</div>
+      <div data-box-number="hello there">2</div>
+      <div data-box-number="3">3</div>
     </section>
-    <!-- End of <body>. Load js here to make sure DOM is fully loaded before running js. -->
+    <p>Lorem ipsum dolor sit amet</p>
     <script src="js/app.js"></script>
-    <!--
-    <script src="js/algorythms3.js"></script>
-    <script src="js/examples.js"></script>
-    -->
   </body>
 </html>
