--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <section>
-      <div data-box-number="1">1</div>
-      <div data-box-number="hello there">2</div>
-      <div data-box-number="3">3</div>
-    </section>
-    <p>Lorem ipsum dolor sit amet</p>
+    <div class="main">
+      
+    </div>
+
     <script src="js/app.js"></script>
   </body>
 </html>
