--- a/index.html
+++ b/index.html
@@ -14,50 +14,52 @@
   <body>
     <div class="main">
       <h1>Task List</h1>
-      <div class="alert dismissible">
+      <div class="alert dismissable">
         Please insert some text <i class="fa-solid fa-rectangle-xmark"></i>
-        <form name="new-task">
-          <label for="task">
-            <input
-              type="text"
-              name="task"
-              placeholder="Add a new task"
-              id="task"
-            />
-            <div class="arrow">
-              <i class="fa-solid fa-arrow-right-long fa-2x"></i>
-            </div>
-          </label>
-        </form>
-        <div class="container">
-          <table>
-            <thead>
-              <tr id="0">
-                <th>Don't Forget To Do This!</th>
-                <th>Edit</th>
-                <th>Delete</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr id="1">
-                <td>
-                  <i class="fa-solid fa-circle-check"></i>
-                  <span>Learn HTML!</span>
-                </td>
-                <td><span class="fa-stack fa-2x">
+      </div>
+      <form name="new-task">
+        <label for="task">
+          <input
+            type="text"
+            name="task"
+            placeholder="Add a new task"
+            id="task"
+          />
+          <div class="arrow">
+            <i class="fa-solid fa-arrow-right-long fa-2x"></i>
+          </div>
+        </label>
+      </form>
+      <div class="container">
+        <table>
+          <thead>
+            <tr id="0">
+              <th>Don't Forget To Do This!</th>
+              <th>Edit</th>
+              <th>Delete</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr id="1">
+              <td>
+                <i class="fa-solid fa-circle-check"></i>
+                <span contenteditable="true" class="task">Learn HTML!</span>
+              </td>
+              <td>
+                <span class="fa-stack fa-2x">
                   <i class="fas fa-square fa-stack-2x"></i>
                   <i class="fa-solid fa-pencil fa-stack-1x fa-inverse"></i>
-                </span></td>
-                <td>
-                  <span class="fa-stack fa-2x">
-                    <i class="fas fa-square fa-stack-2x"></i>
-                    <i class="fa-solid fa-trash fa-stack-1x fa-inverse"></i>
-                  </span>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+                </span>
+              </td>
+              <td>
+                <span class="fa-stack fa-2x">
+                  <i class="fas fa-square fa-stack-2x"></i>
+                  <i class="fa-solid fa-trash fa-stack-1x fa-inverse"></i>
+                </span>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
     <script src="js/app.js"></script>
