Task list finished

--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task List</title>
+    <title>Task list</title>
     <script
-      src="https://kit.fontawesome.com/9cc662dca3.js"
+      src="https://kit.fontawesome.com/84b08cd704.js"
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="main">
-      <h1>Task List</h1>
-      <div class="alert dismissable">
-        Please insert some text <i class="fa-solid fa-rectangle-xmark"></i>
+      <h1>Task list</h1>
+      <div class="alert dismissible">
+        Please insert some text
+        <i class="fa-solid fa-rectangle-xmark"></i>
       </div>
       <form name="new-task">
         <label for="task">
@@ -24,9 +25,10 @@
             name="task"
             placeholder="Add a new task"
             id="task"
+            value=""
           />
           <div class="arrow">
-            <i class="fa-solid fa-arrow-right-long fa-2x"></i>
+            <i class="fa-solid fa-arrow-right-long fa-2xl"></i>
           </div>
         </label>
       </form>
@@ -40,20 +42,20 @@
             </tr>
           </thead>
           <tbody>
-            <tr id="1">
+            <tr id="0" data-complete="false">
               <td>
                 <i class="fa-solid fa-circle-check"></i>
                 <span contenteditable="true" class="task">Learn HTML!</span>
               </td>
               <td>
                 <span class="fa-stack fa-2x">
-                  <i class="fas fa-square fa-stack-2x"></i>
-                  <i class="fa-solid fa-pencil fa-stack-1x fa-inverse"></i>
+                  <i class="fa-solid fa-square fa-stack-2x"></i>
+                  <i class="fa-solid fa-pen fa-stack-1x fa-inverse"></i>
                 </span>
               </td>
               <td>
                 <span class="fa-stack fa-2x">
-                  <i class="fas fa-square fa-stack-2x"></i>
+                  <i class="fa-solid fa-square fa-stack-2x"></i>
                   <i class="fa-solid fa-trash fa-stack-1x fa-inverse"></i>
                 </span>
               </td>
