--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Training Javascript DOM</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <section>
-      <div data-box-number="1">1</div>
-      <div data-box-number="hello there">2</div>
-      <div data-box-number="3">3</div>
+      <div>
+        
+      </div>
     </section>
-    <p>Lorem ipsum dolor sit amet</p>
     <script src="js/app.js"></script>
   </body>
 </html>
