Initial jan-ken-pon commit

--- a/index.html
+++ b/index.html
@@ -4,14 +4,46 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Training Javascript DOM</title>
+    <title>Piedra Papel Tijeras</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredoka&family=Rubik&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <section>
-      <div>
-        
+    <img
+      class="logo"
+      src="img/logo.png"
+      alt="Logotipo de Piedra Papel Tijeras"
+    />
+    <section class="scoreboard">
+      <div class="row top">
+        <span>Jugador</span>
+        <span><img src="img/code-logo.png" alt="CODE logo" /></span>
+        <span>cpu</span>
       </div>
+      <div class="row bottom">
+        <div>00</div>
+        <div>
+          <span>RONDA</span>
+          <div class="round">8</div>
+        </div>
+        <div>88</div>
+      </div>
+    </section>
+    <section class="display">Piedra gana a tijeras -- piedra</section>
+    <section class="results">
+      <div><img src="img/big-rock.png" alt="" /></div>
+      <div><img src="img/big-scissors.png" alt="" /></div>
+    </section>
+    <section class="play">
+      <span>PULSA</span>
+      <div><img src="img/small-rock.png" alt="" /></div>
+      <div><img src="img/small-paper.png" alt="" /></div>
+      <div><img src="img/small-scissors.png" alt="" /></div>
     </section>
     <script src="js/app.js"></script>
   </body>
